--- a/platformio.ini
+++ b/platformio.ini
@@ -17,7 +17,7 @@ monitor_speed = 115200
 lib_deps = 
 	m5stack/M5EPD@^0.1.0
 	bblanchon/ArduinoJson@^6.17.2
-board_build.partitions = default_16MB.csv
+board_build.partitions = large_spiffs_16MB.csv
 build_flags = 
 	-DCORE_DEBUG_LEVEL=4
 	-DBOARD_HAS_PSRAM
