--- a/platformio.ini
+++ b/platformio.ini
@@ -17,8 +17,11 @@ monitor_speed = 115200
 lib_deps = 
 	m5stack/M5EPD@^0.1.0
 	bblanchon/ArduinoJson@^6.17.2
+	lorol/LittleFS_esp32@^1.0.5
 board_build.partitions = large_spiffs_16MB.csv
 build_flags = 
 	-DCORE_DEBUG_LEVEL=4
 	-DBOARD_HAS_PSRAM
 	-mfix-esp32-psram-cache-issue
+	-DCONFIG_LITTLEFS_FOR_IDF_3_2
+extra_scripts = littlefsbuilder.py
