--- a/platformio.ini
+++ b/platformio.ini
@@ -18,6 +18,7 @@ lib_deps =
 	m5stack/M5EPD@^0.1.0
 	bblanchon/ArduinoJson@^6.17.2
 	lorol/LittleFS_esp32@^1.0.5
+	m5ez/ezTime@^0.8.3
 board_build.partitions = large_spiffs_16MB.csv
 build_flags = 
 	-DCORE_DEBUG_LEVEL=4
